--- a/admin/index.html
+++ b/admin/index.html
@@ -70,7 +70,7 @@
 
   <table>
     <tr>
-      <td><img src="landroid-s.png" /></td>
+      <td><img src="kress.png" /></td>
       <td>
         <h3 class="translate">NEW Landroid S 2017</h3></td>
     </tr>
